# Eightrefl

./: CMakeLists.txt  README.md
.github/workflows/: Linux.yml  Windows.yml  macOS.yml
include/Eightrefl/: Attribute.hpp  Child.hpp  Deleter.hpp  Factory.hpp  Function.hpp  Injection.hpp  Meta.hpp  Parent.hpp  Property.hpp  Reflectable.hpp  Reflection.hpp  Registry.hpp  Type.hpp  Utility.hpp
include/Eightrefl/BuiltIn/: Aliasing.hpp  Bool.hpp  BuiltIn.hpp  Char.hpp  Core.hpp  Dirty.hpp  Floating.hpp  Function.hpp  Integral.hpp  Nullptr.hpp  Pointer.hpp  Qualifier.hpp  StaticArray.hpp  Void.hpp
include/Eightrefl/Detail/: Meta.hpp
include/Eightrefl/Dev/: Attribute.hpp  Child.hpp  Deleter.hpp  Dev.hpp  Factory.hpp  Function.hpp  Injectable.hpp  Injection.hpp  Meta.hpp  Parent.hpp  Property.hpp  Reflection.hpp  Registry.hpp  Type.hpp
include/Eightrefl/Standard/: Standard.hpp  allocator.hpp  any.hpp  array.hpp  bitset.hpp  char_traits.hpp  compare.hpp  complex.hpp  deque.hpp  forward_list.hpp  function.hpp  functional.hpp  initializer_list.hpp  iterator.hpp  list.hpp  map.hpp  optional.hpp  pair.hpp  priority_queue.hpp  queue.hpp  reference_wrapper.hpp  set.hpp  shared_ptr.hpp  stack.hpp  string.hpp  tuple.hpp  typeindex.hpp  typeinfo.hpp  unique_ptr.hpp  unordered_map.hpp  unordered_set.hpp  variant.hpp  vector.hpp  weak_ptr.hpp
src/Eightrefl/: Registry.cpp
src/Eightrefl/BuiltIn/: Bool.cpp  Char.cpp  Dirty.cpp  Floating.cpp  Incomplete.cpp  Integral.cpp  Nullptr.cpp  Void.cpp
src/Eightrefl/Dev/: Attribute.cpp  Child.cpp  Deleter.cpp  Dev.cpp  Factory.cpp  Function.cpp  Injection.cpp  Meta.cpp  Parent.cpp  Property.cpp  Reflection.cpp  Registry.cpp  Type.cpp
src/Eightrefl/Standard/: Standard.cpp  any.cpp  char_traits.cpp  compare.cpp  complex.cpp  function.cpp  optional.cpp  shared_ptr.cpp  string.cpp  typeindex.cpp  typeinfo.cpp  variant.cpp
test/: TestAllocator.cpp  TestAny.cpp  TestArray.cpp  TestBitfield.cpp  TestBitset.cpp  TestBuiltIn.cpp  TestComplex.cpp  TestDeleter.cpp  TestDeque.cpp  TestDev.cpp  TestDirty.cpp  TestEnum.cpp  TestExample.cpp  TestFactory.cpp  TestForwardList.cpp  TestFunction.cpp  TestFunctional.cpp  TestInitializerList.cpp  TestInjection.cpp  TestLibrary.cpp  TestList.cpp  TestMap.cpp  TestMeta.cpp  TestNameOf.cpp  TestOptional.cpp  TestPair.cpp  TestPriorityQueue.cpp  TestQueue.cpp  TestReferenceWrapper.cpp  TestRegistryFunction.cpp  TestRegistryProperty.cpp  TestSet.cpp  TestSharedPtr.cpp  TestStack.cpp  TestString.cpp  TestTuple.cpp  TestTypeIndex.cpp  TestTypeInfo.cpp  TestUniquePtr.cpp  TestUnorderedMap.cpp  (+7 more)
